--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -29,7 +29,44 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
-    <section class="grid-test">
+
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-8">
+          <h2 class="heading-secondary">
+            Exciting Tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi
+              dolores adipisci suscipit minus a qui ipsum libero? Labore
+              quisquam est, harum amet repudiandae, similique odio mollitia
+              alias debitis, quos repellendus.
+            </p>
+
+            <h3 class="heading-tertiary">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Asperiores corrupti illum recusandae magni maxime. Hic maiores
+              omnis pariatur itaque atque totam fugiat delectus sit
+              exercitationem, voluptate laborum rerum aliquam autem!
+            </p>
+          </div>
+          <div class="col-1-of-2">
+            image comp
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">
           Col 1 of 2
@@ -95,6 +132,6 @@
           Col 3 of 4
         </div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
