--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -32,35 +32,104 @@
 
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting Tours for adventurous people
           </h2>
         </div>
         <div class="row">
           <div class="col-1-of-2">
-            <h3 class="heading-tertiary">
+            <h3 class="heading-tertiary u-margin-bottom-small">
               You're going to fall in love with nature
             </h3>
             <p class="paragraph">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              dolores adipisci suscipit minus a qui ipsum libero? Labore
-              quisquam est, harum amet repudiandae, similique odio mollitia
-              alias debitis, quos repellendus.
+              dolores adipisci suscipit minus a qui ipsum libero? Labore.
             </p>
 
-            <h3 class="heading-tertiary">
+            <h3 class="heading-tertiary u-margin-bottom-small">
               Live adventures like you never have before
             </h3>
             <p class="paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores corrupti illum recusandae magni maxime. Hic maiores
-              omnis pariatur itaque atque totam fugiat delectus sit
-              exercitationem, voluptate laborum rerum aliquam autem!
+              Asperiores corrupti illum recusandae magni maxime. Hic maiores!
             </p>
+
+            <a href="#" class="btn-text">
+              Learn more &rarr;
+            </a>
           </div>
           <div class="col-1-of-2">
-            image comp
+            <div class="composition">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="Photo 1"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="img/nat-2-large.jpg"
+                alt="Photo 3"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="img/nat-3-large.jpg"
+                alt="Photo 3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                mollitia molestiae voluptatum quas vitae recusandae, quis?
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                mollitia molestiae voluptatum quas vitae recusandae, quis?
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                mollitia molestiae voluptatum quas vitae recusandae, quis?
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                mollitia molestiae voluptatum quas vitae recusandae, quis?
+              </p>
+            </div>
           </div>
         </div>
       </section>
