--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -244,6 +244,39 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people genuinely happy
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil
+                magnam sed exercitationem ea quam deleniti dolor neque
+                veritatis! Ipsam, earum! Nostrum necessitatibus sint eos
+                accusantium, dolore aliquid eveniet cumque dignissimos,
+                veritatis! Ipsam, earum! Nostrum necessitatibus sint eos
+                accusantium.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- <section class="grid-test">
