--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -260,6 +260,9 @@
                 alt="Person on a tour"
                 class="story__img"
               />
+              <figcaption class="story__caption">
+                Mary Smith
+              </figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -275,6 +278,38 @@
               </p>
             </div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">
+                Jack Wilson
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil
+                magnam sed exercitationem ea quam deleniti dolor neque
+                veritatis! Ipsam, earum! Nostrum necessitatibus sint eos
+                accusantium, dolore aliquid eveniet cumque dignissimos,
+                veritatis! Ipsam, earum! Nostrum necessitatibus sint eos
+                accusantium.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
